# waypoint

./: .gitignore  Cargo.toml
dsp/: Cargo.toml
dsp/src/: lib.rs
dsp/src/filters/: kalman.rs
rp-ws128-touch/: Cargo.toml
rp-ws128-touch/.cargo/: config.toml
rp-ws128-touch/src/: battery.rs  main.rs
rp-ws128touch/: Cargo.toml
rp-ws128touch/.cargo/: config.toml
rp-ws128touch/src/: battery.rs  embassy.rs  main.rs
waypoint-core/: Cargo.toml
waypoint-core/src/: accelerometer.rs  application.rs  battery.rs  display.rs  lib.rs
waypoint-mock/: Cargo.toml
waypoint-mock/src/: battery.rs  main.rs
waypoint/src/: application.rs
ws-rp2040-touch-128/: Cargo.toml
ws-rp2040-touch-128/src/: battery.rs
